--- a/views/publisher/publisher.html
+++ b/views/publisher/publisher.html
@@ -1,5 +1,5 @@
 <form method="post" action="#" onsubmit="return false">
-    <label><%= this.className %></label></br>
+    <label><%= this.userName %></label></br>
     <input class = 'messageText' type="text" />
     <button id="sendMsg">Send</button>
     <button id="interrupt">Unsubscribe</button>
